[gd_scene load_steps=8 format=2]

[ext_resource path="res://Rambutan Reach Art Assets/480x270 Rambutan Reach Background.png" type="Texture" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://FirstScene.gd" type="Script" id=3]
[ext_resource path="res://Snipper(final).tscn" type="PackedScene" id=5]
[ext_resource path="res://Rambutan Reach Art Assets/ChiKareGo2.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 207.677, 135.115 )
scale = Vector2( 0.887373, 0.98764 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 62.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="RichTextLabel" parent="Control"]
margin_left = 60.0
margin_top = 31.0
margin_right = 428.0
margin_bottom = 75.0
rect_scale = Vector2( 0.885556, 0.749404 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " [wave amp=50]Cut the Rambutans!"
text = " Cut the Rambutans!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="Control"]
margin_left = 6.29959
margin_top = 6.29961
margin_right = 52.2996
margin_bottom = 21.2996
custom_fonts/font = SubResource( 2 )
text = "Counter: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="Control"]
margin_left = 204.23
margin_top = 212.907
margin_right = 244.23
margin_bottom = 254.907
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Snip" parent="." instance=ExtResource( 5 )]
position = Vector2( 314.787, 221.142 )

[node name="fruit_container" type="Node2D" parent="."]

[node name="game_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
